--- a/app/frontend/src/styles/index.scss
+++ b/app/frontend/src/styles/index.scss
@@ -1,5 +1,9 @@
 @use "@carbon/styles";
 
+body {
+  background-color: #262626;
+}
+
 .icon {
   height: 25px;
   width: 25px;
@@ -24,6 +28,30 @@
   width: 190px;
 }
 
-.data-table-wrapper {
-  position: relative;
+.report-container {
+  display: flex;
+  gap: 35px;
+}
+
+.report-section {
+  flex: 1;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.submit-button {
+  display: block;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.scrollable-table {
+  max-height: 450px;
+  overflow: auto;
+}
+
+h2 {
+  margin-bottom: 50px;
 }
